app/assets/stylesheets/common.scss
/* ... */
// Common Upload File
.uploadFileContainer{
  width: 100%;
  height: 100%;
  .uploadFileLabel{
    @include setFont(var(--font-type-2), normal, 600, 18px, 34px, var(--inactive-gray));
  }
  .uploadForm{
    border: 1px dashed var(--gray);
    border-radius: 6px;
    min-height: 374px;
    max-height: 400px;
    height: 100%;
    align-items: center;
    justify-content: center;
    text-align: center;
    padding: 48px 48px 48px 48px;
    display: flex;
    align-items: center;
    .uploadBox{
      .uploadIcon{
        font-size: 40px;
      }
      .dropBox{
        @include setFont(var(--font-type-2), normal, 600, 20px, 32px, var(--mantle-off-white));
        display: block;
        margin-bottom: 8px;
      }
      .centerText{
        @include setFont(var(--font-type-2), normal, 500, 12px, 17px, var(--text-medium));
        display: block;
        margin-bottom: 8px;
      }
    }
    .uploader{
      display: none;
      .fileName{
        @include setFont(var(--font-type-2), normal, 700, 14px, 17px, var(--inactive-gray));
        word-break: break-word;
      }
    }
    .uploadCompletionMessage{
      @include setFont(var(--font-type-2), normal, 700, 14px, 17px, var(--inactive-gray));
      word-break: break-word;
      display: flex;
      justify-content: center;
    }
  }
  .modalInfoBlock{
    height: 100%;
  }
  .previewImageContainer{
    height: 200px;
    width: 150px;
    img{
      display: block;
      max-width: 100%;
      max-height: 100%;
      min-width: 100%;
      min-height: 100%;
      margin: auto;
      object-fit: contain;
      aspect-ratio: 1/1;
    }
  }
}

// Common Tertiary Button
.tertiaryButton{
  @include setFont(var(--font-type-2), normal, 400, 14px, 17px, var(--inactive-gray));
  background: radial-gradient(50% 50% at 50% 50%, #FFC640 47.4%, #F2AF13 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-fill-color: transparent;
  cursor: pointer;
  display: inline-block;
}

#notificationList{
  height: 215px;
  overflow-y: auto;
}

// New Feature Icon
.newFeatureIcon{
  position: absolute;
  right: 0;
  top: 10px;
  @include setFont(var(--font-type-2), normal, 400, 10px, 14px, var(--header-bg));
  padding: 2px 4px;
  background-color: var(--default);
  border-radius: 5px;
}

